[package]
name = "solana-contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_contracts"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
